# picoprogramming

./: README.md  buildingproc.txt
codes/: .bashrc
codes/DHT11/: CMakeLists.txt
codes/blinker/: CMakeLists.txt  blinker.c
codes/dds_code/: CMakeLists.txt  dactest.c
codes/ex-1/: CMakeLists.txt  ex-1.c
codes/ex-1_interrupt/: CMakeLists.txt  ex-1_interrupt.c
codes/ex-1_states/: CMakeLists.txt  ex-1_states.c
codes/freeRTOS/Queue/: main.c
codes/freeRTOS/blink/: main.c
codes/freeRTOS/messagequeue/: CMakeLists.txt  main.c
codes/freeRTOS/semaphore/: main.c
codes/interrupting/: interrupting.c
codes/mpu6050/: CMakeLists.txt
codes/uartpins/: CMakeLists.txt  uartpins.c
